src/client/css/styles.css
html,
body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  overscroll-behavior: none;
  background-color: black;
}

hr {
  width: 100%;
}
button {
  font-size: 18px;
  outline: none;
  border: none;
  color: black;
  background-color: transparent;
  padding: 5px 20px;
  border-radius: 3px;
  transition: background-color 0.2s ease;
}

button:hover {
  background-color: rgb(230, 230, 230);
}

.hidden {
  display: none !important;
}

#game-canvas {
  width: 100%;
  height: 100%;
}

#play-menu {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  padding: 20px 30px;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 5px;
  text-align: center;
}

#play-menu p {
  margin-bottom: 0;
}

#play-menu input {
  font-size: 18px;
  outline: none;
  border: none;
  border-bottom: 1px solid black;
  margin-bottom: 5px;
  padding: 3px;
  text-align: center;
}

#play-menu input:hover {
  outline: none;
}

